--- a/moduleroot/Rakefile.erb
+++ b/moduleroot/Rakefile.erb
@@ -23,6 +23,8 @@ end
 # only available if gem group releases is installed
 begin
   require 'voxpupuli/release/rake_tasks'
+
+  GCGConfig.user = '<%= @configs['config.user'] -%>'
 rescue LoadError
 end
 
